--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
   "python.linting.enabled": true,
   "python.linting.pylintEnabled": false,
   "python.linting.lintOnSave": true,
-  "python.testing.unittestEnabled": true,
+  "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": false,
   "python.testing.nosetestsEnabled": false,
   "code-runner.clearPreviousOutput": true,
@@ -16,5 +16,6 @@
   "code-runner.executorMap": {
     "python": "python3 -u"
   },
-  "workbench.panel.defaultLocation": "right"
+  "workbench.panel.defaultLocation": "right",
+  "python.testing.promptToConfigure": false
 }
